# Analizador-de-paquetes-de-redes

./: .agrules  .gitignore  Agents.md  LICENSE  README.md  implementation_plan.md  tmp_pdf_text.txt  tmp_read_pdf.py
backend/: CMakeLists.txt
backend/src/: core.cpp  packet_capture.cpp  packet_capture.hpp  protocol_headers.hpp
frontend/: AnalizadorDeRedes.spec  gui.py  main.py  sniffer.manifest
